--- a/Libs/qMRMLWidgets/Resources/UI/qMRMLSliceControllerWidget.ui
+++ b/Libs/qMRMLWidgets/Resources/UI/qMRMLSliceControllerWidget.ui
@@ -30,7 +30,13 @@
     <number>0</number>
    </property>
    <item>
-    <widget class="QPushButton" name="SliceCollapsibleButton">
+    <widget class="QToolButton" name="SliceCollapsibleButton">
+     <property name="sizePolicy">
+      <sizepolicy hsizetype="Expanding" vsizetype="Fixed">
+       <horstretch>0</horstretch>
+       <verstretch>0</verstretch>
+      </sizepolicy>
+     </property>
      <property name="minimumSize">
       <size>
        <width>0</width>
@@ -44,10 +50,10 @@
       </size>
      </property>
      <property name="text">
-      <string/>
+      <string>...</string>
      </property>
-     <property name="checked">
-      <bool>false</bool>
+     <property name="arrowType">
+      <enum>Qt::DownArrow</enum>
      </property>
     </widget>
    </item>
